--- a/classviam_1_1cppsdk_1_1ResourceServerBase.html
+++ b/classviam_1_1cppsdk_1_1ResourceServerBase.html
@@ -89,6 +89,7 @@ $(function() {
   <map id="viam::cppsdk::ResourceServerBase_map" name="viam::cppsdk::ResourceServerBase_map">
 <area href="classviam_1_1cppsdk_1_1CameraServer.html" title="gRPC server implementation of a Camera component." alt="viam::cppsdk::CameraServer" shape="rect" coords="0,56,211,80"/>
 <area href="classviam_1_1cppsdk_1_1GenericServer.html" title="gRPC server implementation of a Generic component." alt="viam::cppsdk::GenericServer" shape="rect" coords="221,56,432,80"/>
+<area href="classviam_1_1cppsdk_1_1MotorServer.html" title="gRPC server implementation of a Motor component." alt="viam::cppsdk::MotorServer" shape="rect" coords="442,56,653,80"/>
   </map>
 </div></div>
 <table class="memberdecls">
