--- a/classviam_1_1cppsdk_1_1ComponentBase.html
+++ b/classviam_1_1cppsdk_1_1ComponentBase.html
@@ -88,11 +88,13 @@ $(function() {
  <div class="center">
   <img src="classviam_1_1cppsdk_1_1ComponentBase.png" usemap="#viam::cppsdk::ComponentBase_map" alt=""/>
   <map id="viam::cppsdk::ComponentBase_map" name="viam::cppsdk::ComponentBase_map">
-<area href="classviam_1_1cppsdk_1_1ResourceBase.html" alt="viam::cppsdk::ResourceBase" shape="rect" coords="95,0,276,24"/>
+<area href="classviam_1_1cppsdk_1_1ResourceBase.html" alt="viam::cppsdk::ResourceBase" shape="rect" coords="191,0,372,24"/>
 <area href="classviam_1_1cppsdk_1_1Camera.html" title="A Camera represents any physical hardware that can capture frames." alt="viam::cppsdk::Camera" shape="rect" coords="0,112,181,136"/>
 <area href="classviam_1_1cppsdk_1_1Generic.html" title="A Generic represents any component that can execute arbitrary commands." alt="viam::cppsdk::Generic" shape="rect" coords="191,112,372,136"/>
+<area href="classviam_1_1cppsdk_1_1Motor.html" title="A Motor represents physical hardware that controls the rotation of an axle." alt="viam::cppsdk::Motor" shape="rect" coords="382,112,563,136"/>
 <area href="classviam_1_1cppsdk_1_1CameraClient.html" title="gRPC client implementation of a Camera component." alt="viam::cppsdk::CameraClient" shape="rect" coords="0,168,181,192"/>
 <area href="classviam_1_1cppsdk_1_1GenericClient.html" title="gRPC client implementation of a Generic component." alt="viam::cppsdk::GenericClient" shape="rect" coords="191,168,372,192"/>
+<area href="classviam_1_1cppsdk_1_1MotorClient.html" title="gRPC client implementation of a Motor component." alt="viam::cppsdk::MotorClient" shape="rect" coords="382,168,563,192"/>
   </map>
 </div></div>
 <table class="memberdecls">
