deploy: 97759b853582eb70b99dbecf8d9fdd8a6072b38b

--- a/classviam_1_1sdk_1_1ResourceBase.html
+++ b/classviam_1_1sdk_1_1ResourceBase.html
@@ -88,14 +88,16 @@ $(function() {
  <div class="center">
   <img src="classviam_1_1sdk_1_1ResourceBase.png" usemap="#viam::sdk::ResourceBase_map" alt=""/>
   <map id="viam::sdk::ResourceBase_map" name="viam::sdk::ResourceBase_map">
-<area href="classviam_1_1sdk_1_1ComponentBase.html" alt="viam::sdk::ComponentBase" shape="rect" coords="170,56,330,80"/>
-<area href="classviam_1_1sdk_1_1ServiceBase.html" alt="viam::sdk::ServiceBase" shape="rect" coords="340,56,500,80"/>
+<area href="classviam_1_1sdk_1_1ComponentBase.html" alt="viam::sdk::ComponentBase" shape="rect" coords="255,56,415,80"/>
+<area href="classviam_1_1sdk_1_1ServiceBase.html" alt="viam::sdk::ServiceBase" shape="rect" coords="425,56,585,80"/>
 <area href="classviam_1_1sdk_1_1Camera.html" title="A Camera represents any physical hardware that can capture frames." alt="viam::sdk::Camera" shape="rect" coords="0,112,160,136"/>
-<area href="classviam_1_1sdk_1_1Generic.html" title="A Generic represents any component that can execute arbitrary commands." alt="viam::sdk::Generic" shape="rect" coords="170,112,330,136"/>
-<area href="classviam_1_1sdk_1_1Motor.html" title="A Motor represents physical hardware that controls the rotation of an axle." alt="viam::sdk::Motor" shape="rect" coords="340,112,500,136"/>
+<area href="classviam_1_1sdk_1_1Encoder.html" title="An encoder is a device that is hooked up to motors to report a position." alt="viam::sdk::Encoder" shape="rect" coords="170,112,330,136"/>
+<area href="classviam_1_1sdk_1_1Generic.html" title="A Generic represents any component that can execute arbitrary commands." alt="viam::sdk::Generic" shape="rect" coords="340,112,500,136"/>
+<area href="classviam_1_1sdk_1_1Motor.html" title="A Motor represents physical hardware that controls the rotation of an axle." alt="viam::sdk::Motor" shape="rect" coords="510,112,670,136"/>
 <area href="classviam_1_1sdk_1_1CameraClient.html" title="gRPC client implementation of a Camera component." alt="viam::sdk::CameraClient" shape="rect" coords="0,168,160,192"/>
-<area href="classviam_1_1sdk_1_1GenericClient.html" title="gRPC client implementation of a Generic component." alt="viam::sdk::GenericClient" shape="rect" coords="170,168,330,192"/>
-<area href="classviam_1_1sdk_1_1MotorClient.html" title="gRPC client implementation of a Motor component." alt="viam::sdk::MotorClient" shape="rect" coords="340,168,500,192"/>
+<area href="classviam_1_1sdk_1_1EncoderClient.html" title="gRPC client implementation of a Encoder component." alt="viam::sdk::EncoderClient" shape="rect" coords="170,168,330,192"/>
+<area href="classviam_1_1sdk_1_1GenericClient.html" title="gRPC client implementation of a Generic component." alt="viam::sdk::GenericClient" shape="rect" coords="340,168,500,192"/>
+<area href="classviam_1_1sdk_1_1MotorClient.html" title="gRPC client implementation of a Motor component." alt="viam::sdk::MotorClient" shape="rect" coords="510,168,670,192"/>
   </map>
 </div></div>
 <table class="memberdecls">
