--- a/classviam_1_1sdk_1_1ResourceServerBase.html
+++ b/classviam_1_1sdk_1_1ResourceServerBase.html
@@ -89,9 +89,10 @@ $(function() {
   <img src="classviam_1_1sdk_1_1ResourceServerBase.png" usemap="#viam::sdk::ResourceServerBase_map" alt=""/>
   <map id="viam::sdk::ResourceServerBase_map" name="viam::sdk::ResourceServerBase_map">
 <area href="classviam_1_1sdk_1_1CameraServer.html" title="gRPC server implementation of a Camera component." alt="viam::sdk::CameraServer" shape="rect" coords="0,56,190,80"/>
-<area href="classviam_1_1sdk_1_1GenericServer.html" title="gRPC server implementation of a Generic component." alt="viam::sdk::GenericServer" shape="rect" coords="200,56,390,80"/>
-<area href="classviam_1_1sdk_1_1MotorServer.html" title="gRPC server implementation of a Motor component." alt="viam::sdk::MotorServer" shape="rect" coords="400,56,590,80"/>
-<area href="classviam_1_1sdk_1_1RobotService__.html" title="a gRPC service for a robot." alt="viam::sdk::RobotService_" shape="rect" coords="600,56,790,80"/>
+<area href="classviam_1_1sdk_1_1EncoderServer.html" title="gRPC server implementation of a Encoder component." alt="viam::sdk::EncoderServer" shape="rect" coords="200,56,390,80"/>
+<area href="classviam_1_1sdk_1_1GenericServer.html" title="gRPC server implementation of a Generic component." alt="viam::sdk::GenericServer" shape="rect" coords="400,56,590,80"/>
+<area href="classviam_1_1sdk_1_1MotorServer.html" title="gRPC server implementation of a Motor component." alt="viam::sdk::MotorServer" shape="rect" coords="600,56,790,80"/>
+<area href="classviam_1_1sdk_1_1RobotService__.html" title="a gRPC service for a robot." alt="viam::sdk::RobotService_" shape="rect" coords="800,56,990,80"/>
   </map>
 </div></div>
 <table class="memberdecls">
