deploy: 84b03b97bcf7b42519a64f3a9b55781633dbff5e

--- a/classviam_1_1sdk_1_1Component.html
+++ b/classviam_1_1sdk_1_1Component.html
@@ -88,17 +88,19 @@ $(function() {
  <div class="center">
   <img src="classviam_1_1sdk_1_1Component.png" usemap="#viam::sdk::Component_map" alt=""/>
   <map id="viam::sdk::Component_map" name="viam::sdk::Component_map">
-<area href="classviam_1_1sdk_1_1Resource.html" alt="viam::sdk::Resource" shape="rect" coords="318,0,467,24"/>
+<area href="classviam_1_1sdk_1_1Resource.html" alt="viam::sdk::Resource" shape="rect" coords="397,0,546,24"/>
 <area href="classviam_1_1sdk_1_1Base.html" title="A Base is the platform that the other parts of a mobile robot attach to." alt="viam::sdk::Base" shape="rect" coords="0,112,149,136"/>
-<area href="classviam_1_1sdk_1_1Camera.html" title="A Camera represents any physical hardware that can capture frames." alt="viam::sdk::Camera" shape="rect" coords="159,112,308,136"/>
-<area href="classviam_1_1sdk_1_1Encoder.html" title="An encoder is a device that is hooked up to motors to report a position." alt="viam::sdk::Encoder" shape="rect" coords="318,112,467,136"/>
-<area href="classviam_1_1sdk_1_1Generic.html" title="A Generic represents any component that can execute arbitrary commands." alt="viam::sdk::Generic" shape="rect" coords="477,112,626,136"/>
-<area href="classviam_1_1sdk_1_1Motor.html" title="A Motor represents physical hardware that controls the rotation of an axle." alt="viam::sdk::Motor" shape="rect" coords="636,112,785,136"/>
+<area href="classviam_1_1sdk_1_1Board.html" title="Represents a physical board with gpio pins, digital interrupts, and analog voltage reading." alt="viam::sdk::Board" shape="rect" coords="159,112,308,136"/>
+<area href="classviam_1_1sdk_1_1Camera.html" title="A Camera represents any physical hardware that can capture frames." alt="viam::sdk::Camera" shape="rect" coords="318,112,467,136"/>
+<area href="classviam_1_1sdk_1_1Encoder.html" title="An encoder is a device that is hooked up to motors to report a position." alt="viam::sdk::Encoder" shape="rect" coords="477,112,626,136"/>
+<area href="classviam_1_1sdk_1_1Generic.html" title="A Generic represents any component that can execute arbitrary commands." alt="viam::sdk::Generic" shape="rect" coords="636,112,785,136"/>
+<area href="classviam_1_1sdk_1_1Motor.html" title="A Motor represents physical hardware that controls the rotation of an axle." alt="viam::sdk::Motor" shape="rect" coords="795,112,944,136"/>
 <area href="classviam_1_1sdk_1_1BaseClient.html" title="gRPC client implementation of a Base component." alt="viam::sdk::BaseClient" shape="rect" coords="0,168,149,192"/>
-<area href="classviam_1_1sdk_1_1CameraClient.html" title="gRPC client implementation of a Camera component." alt="viam::sdk::CameraClient" shape="rect" coords="159,168,308,192"/>
-<area href="classviam_1_1sdk_1_1EncoderClient.html" title="gRPC client implementation of a Encoder component." alt="viam::sdk::EncoderClient" shape="rect" coords="318,168,467,192"/>
-<area href="classviam_1_1sdk_1_1GenericClient.html" title="gRPC client implementation of a Generic component." alt="viam::sdk::GenericClient" shape="rect" coords="477,168,626,192"/>
-<area href="classviam_1_1sdk_1_1MotorClient.html" title="gRPC client implementation of a Motor component." alt="viam::sdk::MotorClient" shape="rect" coords="636,168,785,192"/>
+<area href="classviam_1_1sdk_1_1BoardClient.html" title="gRPC client implementation of a Board component." alt="viam::sdk::BoardClient" shape="rect" coords="159,168,308,192"/>
+<area href="classviam_1_1sdk_1_1CameraClient.html" title="gRPC client implementation of a Camera component." alt="viam::sdk::CameraClient" shape="rect" coords="318,168,467,192"/>
+<area href="classviam_1_1sdk_1_1EncoderClient.html" title="gRPC client implementation of a Encoder component." alt="viam::sdk::EncoderClient" shape="rect" coords="477,168,626,192"/>
+<area href="classviam_1_1sdk_1_1GenericClient.html" title="gRPC client implementation of a Generic component." alt="viam::sdk::GenericClient" shape="rect" coords="636,168,785,192"/>
+<area href="classviam_1_1sdk_1_1MotorClient.html" title="gRPC client implementation of a Motor component." alt="viam::sdk::MotorClient" shape="rect" coords="795,168,944,192"/>
   </map>
 </div></div>
 <table class="memberdecls">
