--- a/classviam_1_1sdk_1_1ResourceServer.html
+++ b/classviam_1_1sdk_1_1ResourceServer.html
@@ -89,11 +89,12 @@ $(function() {
   <img src="classviam_1_1sdk_1_1ResourceServer.png" usemap="#viam::sdk::ResourceServer_map" alt=""/>
   <map id="viam::sdk::ResourceServer_map" name="viam::sdk::ResourceServer_map">
 <area href="classviam_1_1sdk_1_1BaseServer.html" title="gRPC server implementation of a Base component." alt="viam::sdk::BaseServer" shape="rect" coords="0,56,162,80"/>
-<area href="classviam_1_1sdk_1_1CameraServer.html" title="gRPC server implementation of a Camera component." alt="viam::sdk::CameraServer" shape="rect" coords="172,56,334,80"/>
-<area href="classviam_1_1sdk_1_1EncoderServer.html" title="gRPC server implementation of a Encoder component." alt="viam::sdk::EncoderServer" shape="rect" coords="344,56,506,80"/>
-<area href="classviam_1_1sdk_1_1GenericServer.html" title="gRPC server implementation of a Generic component." alt="viam::sdk::GenericServer" shape="rect" coords="516,56,678,80"/>
-<area href="classviam_1_1sdk_1_1MotorServer.html" title="gRPC server implementation of a Motor component." alt="viam::sdk::MotorServer" shape="rect" coords="688,56,850,80"/>
-<area href="classviam_1_1sdk_1_1RobotService__.html" title="a gRPC service for a robot." alt="viam::sdk::RobotService_" shape="rect" coords="860,56,1022,80"/>
+<area href="classviam_1_1sdk_1_1BoardServer.html" title="gRPC server implementation of a Board component." alt="viam::sdk::BoardServer" shape="rect" coords="172,56,334,80"/>
+<area href="classviam_1_1sdk_1_1CameraServer.html" title="gRPC server implementation of a Camera component." alt="viam::sdk::CameraServer" shape="rect" coords="344,56,506,80"/>
+<area href="classviam_1_1sdk_1_1EncoderServer.html" title="gRPC server implementation of a Encoder component." alt="viam::sdk::EncoderServer" shape="rect" coords="516,56,678,80"/>
+<area href="classviam_1_1sdk_1_1GenericServer.html" title="gRPC server implementation of a Generic component." alt="viam::sdk::GenericServer" shape="rect" coords="688,56,850,80"/>
+<area href="classviam_1_1sdk_1_1MotorServer.html" title="gRPC server implementation of a Motor component." alt="viam::sdk::MotorServer" shape="rect" coords="860,56,1022,80"/>
+<area href="classviam_1_1sdk_1_1RobotService__.html" title="a gRPC service for a robot." alt="viam::sdk::RobotService_" shape="rect" coords="1032,56,1194,80"/>
   </map>
 </div></div>
 <table class="memberdecls">
