deploy: 7fe69934fbedb3909df547ca99b244bdfcf9848f

--- a/classviam_1_1sdk_1_1ResourceServer.html
+++ b/classviam_1_1sdk_1_1ResourceServer.html
@@ -88,13 +88,14 @@ $(function() {
  <div class="center">
   <img src="classviam_1_1sdk_1_1ResourceServer.png" usemap="#viam::sdk::ResourceServer_map" alt=""/>
   <map id="viam::sdk::ResourceServer_map" name="viam::sdk::ResourceServer_map">
-<area href="classviam_1_1sdk_1_1BaseServer.html" title="gRPC server implementation of a Base component." alt="viam::sdk::BaseServer" shape="rect" coords="0,56,162,80"/>
-<area href="classviam_1_1sdk_1_1BoardServer.html" title="gRPC server implementation of a Board component." alt="viam::sdk::BoardServer" shape="rect" coords="172,56,334,80"/>
-<area href="classviam_1_1sdk_1_1CameraServer.html" title="gRPC server implementation of a Camera component." alt="viam::sdk::CameraServer" shape="rect" coords="344,56,506,80"/>
-<area href="classviam_1_1sdk_1_1EncoderServer.html" title="gRPC server implementation of a Encoder component." alt="viam::sdk::EncoderServer" shape="rect" coords="516,56,678,80"/>
-<area href="classviam_1_1sdk_1_1GenericServer.html" title="gRPC server implementation of a Generic component." alt="viam::sdk::GenericServer" shape="rect" coords="688,56,850,80"/>
-<area href="classviam_1_1sdk_1_1MotorServer.html" title="gRPC server implementation of a Motor component." alt="viam::sdk::MotorServer" shape="rect" coords="860,56,1022,80"/>
-<area href="classviam_1_1sdk_1_1RobotService__.html" title="a gRPC service for a robot." alt="viam::sdk::RobotService_" shape="rect" coords="1032,56,1194,80"/>
+<area href="classviam_1_1sdk_1_1BaseServer.html" title="gRPC server implementation of a Base component." alt="viam::sdk::BaseServer" shape="rect" coords="215,56,420,80"/>
+<area href="classviam_1_1sdk_1_1BoardServer.html" title="gRPC server implementation of a Board component." alt="viam::sdk::BoardServer" shape="rect" coords="215,112,420,136"/>
+<area href="classviam_1_1sdk_1_1CameraServer.html" title="gRPC server implementation of a Camera component." alt="viam::sdk::CameraServer" shape="rect" coords="215,168,420,192"/>
+<area href="classviam_1_1sdk_1_1EncoderServer.html" title="gRPC server implementation of a Encoder component." alt="viam::sdk::EncoderServer" shape="rect" coords="215,224,420,248"/>
+<area href="classviam_1_1sdk_1_1GenericServer.html" title="gRPC server implementation of a Generic component." alt="viam::sdk::GenericServer" shape="rect" coords="215,280,420,304"/>
+<area href="classviam_1_1sdk_1_1MLModelServiceServer.html" alt="viam::sdk::MLModelServiceServer" shape="rect" coords="215,336,420,360"/>
+<area href="classviam_1_1sdk_1_1MotorServer.html" title="gRPC server implementation of a Motor component." alt="viam::sdk::MotorServer" shape="rect" coords="215,392,420,416"/>
+<area href="classviam_1_1sdk_1_1RobotService__.html" title="a gRPC service for a robot." alt="viam::sdk::RobotService_" shape="rect" coords="215,448,420,472"/>
   </map>
 </div></div>
 <table class="memberdecls">
