--- a/classviam_1_1sdk_1_1Service.html
+++ b/classviam_1_1sdk_1_1Service.html
@@ -88,7 +88,9 @@ $(function() {
  <div class="center">
   <img src="classviam_1_1sdk_1_1Service.png" usemap="#viam::sdk::Service_map" alt=""/>
   <map id="viam::sdk::Service_map" name="viam::sdk::Service_map">
-<area href="classviam_1_1sdk_1_1Resource.html" alt="viam::sdk::Resource" shape="rect" coords="0,0,123,24"/>
+<area href="classviam_1_1sdk_1_1Resource.html" alt="viam::sdk::Resource" shape="rect" coords="0,0,198,24"/>
+<area href="classviam_1_1sdk_1_1MLModelService.html" title="Represents a machine trained learning model instance." alt="viam::sdk::MLModelService" shape="rect" coords="0,112,198,136"/>
+<area href="classviam_1_1sdk_1_1MLModelServiceClient.html" alt="viam::sdk::MLModelServiceClient" shape="rect" coords="0,168,198,192"/>
   </map>
 </div></div>
 <table class="memberdecls">
