deploy: 31bed7f08b374e1910c41a975c6dead18159b3d4

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ $(function() {
 <h1><a class="anchor" id="autotoc_md1"></a>
 (In)stability Notice</h1>
 <blockquote class="doxtable">
-<p>&zwj;<b>Warning</b> This is a alpha release of the Viam C++ SDK. Stability is not guaranteed. Breaking changes are likely to occur, and occur often. </p>
+<p>&zwj;<b>Warning</b> This is a beta release of the Viam C++ SDK. Stability is not guaranteed. Breaking changes are likely to occur, and occur often. </p>
 </blockquote>
 <h1><a class="anchor" id="autotoc_md2"></a>
 Resources</h1>
