deploy: 14fbd6e8fd22b5e51337e24c8a5ea7862beb2bf6

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@ Repository Layout</h1>
 </ul>
 <h1><a class="anchor" id="autotoc_md4"></a>
 Getting Started</h1>
-<p>NOTE: Please see <a href="https://github.com/viamrobotics/viam-cpp-sdk/blob/main/BUILDING.md">BUILDING.md</a> for instructions on how to use CMake-based build system for this project.</p>
+<p>Please see <a href="https://github.com/viamrobotics/viam-cpp-sdk/blob/main/BUILDING.md">BUILDING.md</a> for instructions on how to use CMake-based build system for this project.</p>
+<p>NOTE: Windows is not supported. If you are using Windows, build the project in WSL.</p>
 <h1><a class="anchor" id="autotoc_md5"></a>
 Using Docker for Development</h1>
 <p>A Docker description is included which will install the required packages.</p><ol type="1">
