--- a/classviam_1_1sdk_1_1ResourceServer.html
+++ b/classviam_1_1sdk_1_1ResourceServer.html
@@ -88,17 +88,18 @@ $(function() {
  <div class="center">
   <img src="classviam_1_1sdk_1_1ResourceServer.png" usemap="#viam::sdk::ResourceServer_map" alt=""/>
   <map id="viam::sdk::ResourceServer_map" name="viam::sdk::ResourceServer_map">
-<area href="classGizmoServer.html" alt="GizmoServer" shape="rect" coords="215,56,420,80"/>
-<area href="classSummationServer.html" alt="SummationServer" shape="rect" coords="215,112,420,136"/>
-<area href="classviam_1_1sdk_1_1BaseServer.html" title="gRPC server implementation of a Base component." alt="viam::sdk::BaseServer" shape="rect" coords="215,168,420,192"/>
-<area href="classviam_1_1sdk_1_1BoardServer.html" title="gRPC server implementation of a Board component." alt="viam::sdk::BoardServer" shape="rect" coords="215,224,420,248"/>
-<area href="classviam_1_1sdk_1_1CameraServer.html" title="gRPC server implementation of a Camera component." alt="viam::sdk::CameraServer" shape="rect" coords="215,280,420,304"/>
-<area href="classviam_1_1sdk_1_1EncoderServer.html" title="gRPC server implementation of a Encoder component." alt="viam::sdk::EncoderServer" shape="rect" coords="215,336,420,360"/>
-<area href="classviam_1_1sdk_1_1GenericServer.html" title="gRPC server implementation of a Generic component." alt="viam::sdk::GenericServer" shape="rect" coords="215,392,420,416"/>
-<area href="classviam_1_1sdk_1_1MLModelServiceServer.html" alt="viam::sdk::MLModelServiceServer" shape="rect" coords="215,448,420,472"/>
-<area href="classviam_1_1sdk_1_1MotionServer.html" title="gRPC server implementation of a Motion service." alt="viam::sdk::MotionServer" shape="rect" coords="215,504,420,528"/>
-<area href="classviam_1_1sdk_1_1MotorServer.html" title="gRPC server implementation of a Motor component." alt="viam::sdk::MotorServer" shape="rect" coords="215,560,420,584"/>
-<area href="classviam_1_1sdk_1_1RobotService__.html" title="a gRPC service for a robot." alt="viam::sdk::RobotService_" shape="rect" coords="215,616,420,640"/>
+<area href="classGizmoServer.html" alt="GizmoServer" shape="rect" coords="216,56,422,80"/>
+<area href="classSummationServer.html" alt="SummationServer" shape="rect" coords="216,112,422,136"/>
+<area href="classviam_1_1sdk_1_1BaseServer.html" title="gRPC server implementation of a Base component." alt="viam::sdk::BaseServer" shape="rect" coords="216,168,422,192"/>
+<area href="classviam_1_1sdk_1_1BoardServer.html" title="gRPC server implementation of a Board component." alt="viam::sdk::BoardServer" shape="rect" coords="216,224,422,248"/>
+<area href="classviam_1_1sdk_1_1CameraServer.html" title="gRPC server implementation of a Camera component." alt="viam::sdk::CameraServer" shape="rect" coords="216,280,422,304"/>
+<area href="classviam_1_1sdk_1_1EncoderServer.html" title="gRPC server implementation of a Encoder component." alt="viam::sdk::EncoderServer" shape="rect" coords="216,336,422,360"/>
+<area href="classviam_1_1sdk_1_1GenericServer.html" title="gRPC server implementation of a Generic component." alt="viam::sdk::GenericServer" shape="rect" coords="216,392,422,416"/>
+<area href="classviam_1_1sdk_1_1MLModelServiceServer.html" alt="viam::sdk::MLModelServiceServer" shape="rect" coords="216,448,422,472"/>
+<area href="classviam_1_1sdk_1_1MotionServer.html" title="gRPC server implementation of a Motion service." alt="viam::sdk::MotionServer" shape="rect" coords="216,504,422,528"/>
+<area href="classviam_1_1sdk_1_1MotorServer.html" title="gRPC server implementation of a Motor component." alt="viam::sdk::MotorServer" shape="rect" coords="216,560,422,584"/>
+<area href="classviam_1_1sdk_1_1MovementSensorServer.html" title="gRPC server implementation of a MovementSensor component." alt="viam::sdk::MovementSensorServer" shape="rect" coords="216,616,422,640"/>
+<area href="classviam_1_1sdk_1_1RobotService__.html" title="a gRPC service for a robot." alt="viam::sdk::RobotService_" shape="rect" coords="216,672,422,696"/>
   </map>
 </div></div>
 <table class="memberdecls">
