deploy: 229d9505b8ac180813c21833cda8d0060cbf0515

--- a/resource__manager_8hpp.html
+++ b/resource__manager_8hpp.html
@@ -83,6 +83,7 @@ $(function() {
 <a href="#details">More...</a></p>
 <div class="textblock"><code>#include &lt;memory&gt;</code><br />
 <code>#include &lt;string&gt;</code><br />
+<code>#include &lt;type_traits&gt;</code><br />
 <code>#include &lt;unordered_map&gt;</code><br />
 <code>#include &lt;boost/optional/optional.hpp&gt;</code><br />
 <code>#include &lt;grpcpp/impl/service_type.h&gt;</code><br />
