deploy: 77c4d7b9bd2176764cc638247a2f1586724d61d6

--- a/classviam_1_1sdk_1_1Component.html
+++ b/classviam_1_1sdk_1_1Component.html
@@ -97,6 +97,7 @@ $(function() {
 <area href="classviam_1_1sdk_1_1Generic.html" title="A Generic represents any component that can execute arbitrary commands." alt="viam::sdk::Generic" shape="rect" coords="177,392,344,416"/>
 <area href="classviam_1_1sdk_1_1Motor.html" title="A Motor represents physical hardware that controls the rotation of an axle." alt="viam::sdk::Motor" shape="rect" coords="177,448,344,472"/>
 <area href="classviam_1_1sdk_1_1MovementSensor.html" alt="viam::sdk::MovementSensor" shape="rect" coords="177,504,344,528"/>
+<area href="classviam_1_1sdk_1_1Sensor.html" alt="viam::sdk::Sensor" shape="rect" coords="177,560,344,584"/>
   </map>
 </div></div>
 <table class="memberdecls">
