--- a/classviam_1_1sdk_1_1ResourceServer.html
+++ b/classviam_1_1sdk_1_1ResourceServer.html
@@ -99,8 +99,9 @@ $(function() {
 <area href="classviam_1_1sdk_1_1MotionServer.html" title="gRPC server implementation of a Motion service." alt="viam::sdk::MotionServer" shape="rect" coords="216,504,422,528"/>
 <area href="classviam_1_1sdk_1_1MotorServer.html" title="gRPC server implementation of a Motor component." alt="viam::sdk::MotorServer" shape="rect" coords="216,560,422,584"/>
 <area href="classviam_1_1sdk_1_1MovementSensorServer.html" title="gRPC server implementation of a MovementSensor component." alt="viam::sdk::MovementSensorServer" shape="rect" coords="216,616,422,640"/>
-<area href="classviam_1_1sdk_1_1RobotService__.html" title="a gRPC service for a robot." alt="viam::sdk::RobotService_" shape="rect" coords="216,672,422,696"/>
-<area href="classviam_1_1sdk_1_1SensorServer.html" title="gRPC server implementation of a Sensor component." alt="viam::sdk::SensorServer" shape="rect" coords="216,728,422,752"/>
+<area href="classviam_1_1sdk_1_1PowerSensorServer.html" title="gRPC server implementation of a PowerSensor component." alt="viam::sdk::PowerSensorServer" shape="rect" coords="216,672,422,696"/>
+<area href="classviam_1_1sdk_1_1RobotService__.html" title="a gRPC service for a robot." alt="viam::sdk::RobotService_" shape="rect" coords="216,728,422,752"/>
+<area href="classviam_1_1sdk_1_1SensorServer.html" title="gRPC server implementation of a Sensor component." alt="viam::sdk::SensorServer" shape="rect" coords="216,784,422,808"/>
   </map>
 </div></div>
 <table class="memberdecls">
