--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -66,6 +66,7 @@
 <a href="signal__manager_8hpp_source.html"/>
 <a href="frame_8hpp_source.html"/>
 <a href="registry_8hpp_source.html"/>
+<a href="reconfigurable_8hpp_source.html"/>
 <a href="config_2resource_8hpp_source.html"/>
 <a href="resource_2resource_8hpp_source.html"/>
 <a href="resource__api_8hpp_source.html"/>
@@ -394,6 +395,8 @@
 <a href="classviam_1_1sdk_1_1ProtoType-members.html"/>
 <a href="structviam_1_1sdk_1_1quaternion.html"/>
 <a href="structviam_1_1sdk_1_1quaternion-members.html"/>
+<a href="classviam_1_1sdk_1_1Reconfigurable.html"/>
+<a href="classviam_1_1sdk_1_1Reconfigurable-members.html"/>
 <a href="classviam_1_1sdk_1_1Registry.html"/>
 <a href="classviam_1_1sdk_1_1Registry-members.html"/>
 <a href="classviam_1_1sdk_1_1Resource.html"/>
