deploy: 641a6180c02d5ca0f7b277f4ab9812ada9f35e79

--- a/camera_8hpp.html
+++ b/camera_8hpp.html
@@ -88,6 +88,8 @@ $(function() {
 <code>#include &lt;chrono&gt;</code><br />
 <code>#include &lt;string&gt;</code><br />
 <code>#include &lt;vector&gt;</code><br />
+<code>#include &lt;boost/endian/conversion.hpp&gt;</code><br />
+<code>#include &lt;xtensor/xarray.hpp&gt;</code><br />
 <code>#include &lt;viam/api/common/v1/common.pb.h&gt;</code><br />
 <code>#include &lt;viam/api/component/camera/v1/camera.pb.h&gt;</code><br />
 <code>#include &lt;viam/sdk/common/proto_type.hpp&gt;</code><br />
