--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -127,6 +127,7 @@
 <a href="group__Servo.html"/>
 <a href="group__Module.html"/>
 <a href="group__Robot.html"/>
+<a href="structdepth__map.html"/>
 <a href="classErrorCondition.html"/>
 <a href="classGizmo.html"/>
 <a href="classGizmo-members.html"/>
@@ -520,6 +521,7 @@
 <a href="functions_func_b.html"/>
 <a href="functions_func_c.html"/>
 <a href="functions_func_d.html"/>
+<a href="functions_func_e.html"/>
 <a href="functions_func_f.html"/>
 <a href="functions_func_g.html"/>
 <a href="functions_func_i.html"/>
