deploy: d5b988ce028bcce326c3ac7cde73fe69914e5744

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -26,8 +26,6 @@
 <a href="camera_8hpp_source.html"/>
 <a href="component_8hpp_source.html"/>
 <a href="encoder_8hpp_source.html"/>
-<a href="components_2generic_8hpp_source.html"/>
-<a href="services_2generic_8hpp_source.html"/>
 <a href="motor_8hpp_source.html"/>
 <a href="movement__sensor_8hpp_source.html"/>
 <a href="power__sensor_8hpp_source.html"/>
@@ -39,10 +37,6 @@
 <a href="camera__server_8hpp_source.html"/>
 <a href="encoder__client_8hpp_source.html"/>
 <a href="encoder__server_8hpp_source.html"/>
-<a href="components_2private_2generic__client_8hpp_source.html"/>
-<a href="services_2private_2generic__client_8hpp_source.html"/>
-<a href="components_2private_2generic__server_8hpp_source.html"/>
-<a href="services_2private_2generic__server_8hpp_source.html"/>
 <a href="motor__client_8hpp_source.html"/>
 <a href="motor__server_8hpp_source.html"/>
 <a href="movement__sensor__client_8hpp_source.html"/>
@@ -57,6 +51,9 @@
 <a href="servo_8hpp_source.html"/>
 <a href="handler__map_8hpp_source.html"/>
 <a href="module_8hpp_source.html"/>
+<a href="module_2service_8hpp_source.html"/>
+<a href="robot_2service_8hpp_source.html"/>
+<a href="services_2service_8hpp_source.html"/>
 <a href="signal__manager_8hpp_source.html"/>
 <a href="frame_8hpp_source.html"/>
 <a href="registry_8hpp_source.html"/>
@@ -70,16 +67,19 @@
 <a href="client_8hpp_source.html"/>
 <a href="dial_8hpp_source.html"/>
 <a href="server_8hpp_source.html"/>
+<a href="components_2generic_8hpp_source.html"/>
+<a href="services_2generic_8hpp_source.html"/>
 <a href="mlmodel_8hpp_source.html"/>
 <a href="private_2mlmodel_8hpp_source.html"/>
 <a href="motion_8hpp_source.html"/>
+<a href="components_2private_2generic__client_8hpp_source.html"/>
+<a href="services_2private_2generic__client_8hpp_source.html"/>
+<a href="components_2private_2generic__server_8hpp_source.html"/>
+<a href="services_2private_2generic__server_8hpp_source.html"/>
 <a href="mlmodel__client_8hpp_source.html"/>
 <a href="mlmodel__server_8hpp_source.html"/>
 <a href="motion__client_8hpp_source.html"/>
 <a href="motion__server_8hpp_source.html"/>
-<a href="module_2service_8hpp_source.html"/>
-<a href="robot_2service_8hpp_source.html"/>
-<a href="services_2service_8hpp_source.html"/>
 <a href="geometry_8hpp_source.html"/>
 <a href="orientation_8hpp_source.html"/>
 <a href="orientation__types_8hpp_source.html"/>
@@ -88,7 +88,6 @@
 <a href="board_8hpp.html"/>
 <a href="camera_8hpp.html"/>
 <a href="encoder_8hpp.html"/>
-<a href="components_2generic_8hpp.html"/>
 <a href="motor_8hpp.html"/>
 <a href="movement__sensor_8hpp.html"/>
 <a href="power__sensor_8hpp.html"/>
@@ -100,8 +99,6 @@
 <a href="camera__server_8hpp.html"/>
 <a href="encoder__client_8hpp.html"/>
 <a href="encoder__server_8hpp.html"/>
-<a href="components_2private_2generic__client_8hpp.html"/>
-<a href="components_2private_2generic__server_8hpp.html"/>
 <a href="motor__client_8hpp.html"/>
 <a href="motor__server_8hpp.html"/>
 <a href="movement__sensor__client_8hpp.html"/>
@@ -118,6 +115,9 @@
 <a href="resource__manager_8hpp.html"/>
 <a href="client_8hpp.html"/>
 <a href="server_8hpp.html"/>
+<a href="components_2generic_8hpp.html"/>
+<a href="components_2private_2generic__client_8hpp.html"/>
+<a href="components_2private_2generic__server_8hpp.html"/>
 <a href="deprecated.html"/>
 <a href="group__Exception.html"/>
 <a href="group__Base.html"/>
@@ -150,6 +150,7 @@
 <a href="classSummationClient-members.html"/>
 <a href="classSummationServer.html"/>
 <a href="classSummationServer-members.html"/>
+<a href="structtick.html"/>
 <a href="structboost_1_1qvm_1_1vec__traits_3_01viam_1_1sdk_1_1Vector3_01_4.html"/>
 <a href="structboost_1_1qvm_1_1vec__traits_3_01viam_1_1sdk_1_1Vector3_01_4-members.html"/>
 <a href="structstd_1_1hash_3_1_1viam_1_1sdk_1_1API_01_4.html"/>
@@ -206,6 +207,8 @@
 <a href="classviam_1_1sdk_1_1Board-members.html"/>
 <a href="structviam_1_1sdk_1_1Board_1_1status.html"/>
 <a href="structviam_1_1sdk_1_1Board_1_1status-members.html"/>
+<a href="structviam_1_1sdk_1_1Board_1_1Tick.html"/>
+<a href="structviam_1_1sdk_1_1Board_1_1Tick-members.html"/>
 <a href="structviam_1_1sdk_1_1box.html"/>
 <a href="structviam_1_1sdk_1_1box-members.html"/>
 <a href="classviam_1_1sdk_1_1Camera.html"/>
@@ -506,6 +509,7 @@
 <a href="functions_e.html"/>
 <a href="functions_f.html"/>
 <a href="functions_g.html"/>
+<a href="functions_h.html"/>
 <a href="functions_i.html"/>
 <a href="functions_l.html"/>
 <a href="functions_m.html"/>
@@ -532,6 +536,7 @@
 <a href="functions_func_s.html"/>
 <a href="functions_func_t.html"/>
 <a href="functions_func_w.html"/>
+<a href="functions_vars.html"/>
 <a href="functions_vars.html"/>
 <a href="functions_vars.html"/>
 <a href="functions_vars.html"/>
