--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -205,6 +205,8 @@
 <a href="structviam_1_1sdk_1_1Base_1_1properties-members.html"/>
 <a href="classviam_1_1sdk_1_1Board.html"/>
 <a href="classviam_1_1sdk_1_1Board-members.html"/>
+<a href="structviam_1_1sdk_1_1Board_1_1analog__response.html"/>
+<a href="structviam_1_1sdk_1_1Board_1_1analog__response-members.html"/>
 <a href="structviam_1_1sdk_1_1Board_1_1status.html"/>
 <a href="structviam_1_1sdk_1_1Board_1_1status-members.html"/>
 <a href="structviam_1_1sdk_1_1Board_1_1Tick.html"/>
