--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -550,6 +550,9 @@
 <a href="functions_vars.html"/>
 <a href="functions_vars.html"/>
 <a href="functions_vars.html"/>
+<a href="functions_vars.html"/>
+<a href="functions_vars.html"/>
+<a href="functions_type.html"/>
 <a href="functions_type.html"/>
 <a href="functions_type.html"/>
 <a href="functions_type.html"/>
