deploy: 40b7f496d4c0c2c1fc4904932ebd49e68c111cf3

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -29,6 +29,7 @@
 <a href="encoder_8hpp_source.html"/>
 <a href="components_2generic_8hpp_source.html"/>
 <a href="services_2generic_8hpp_source.html"/>
+<a href="gripper_8hpp_source.html"/>
 <a href="motor_8hpp_source.html"/>
 <a href="movement__sensor_8hpp_source.html"/>
 <a href="power__sensor_8hpp_source.html"/>
@@ -46,6 +47,8 @@
 <a href="services_2private_2generic__client_8hpp_source.html"/>
 <a href="components_2private_2generic__server_8hpp_source.html"/>
 <a href="services_2private_2generic__server_8hpp_source.html"/>
+<a href="gripper__client_8hpp_source.html"/>
+<a href="gripper__server_8hpp_source.html"/>
 <a href="motor__client_8hpp_source.html"/>
 <a href="motor__server_8hpp_source.html"/>
 <a href="movement__sensor__client_8hpp_source.html"/>
@@ -93,6 +96,7 @@
 <a href="camera_8hpp.html"/>
 <a href="encoder_8hpp.html"/>
 <a href="components_2generic_8hpp.html"/>
+<a href="gripper_8hpp.html"/>
 <a href="motor_8hpp.html"/>
 <a href="movement__sensor_8hpp.html"/>
 <a href="power__sensor_8hpp.html"/>
@@ -108,6 +112,8 @@
 <a href="encoder__server_8hpp.html"/>
 <a href="components_2private_2generic__client_8hpp.html"/>
 <a href="components_2private_2generic__server_8hpp.html"/>
+<a href="gripper__client_8hpp.html"/>
+<a href="gripper__server_8hpp.html"/>
 <a href="motor__client_8hpp.html"/>
 <a href="motor__server_8hpp.html"/>
 <a href="movement__sensor__client_8hpp.html"/>
@@ -128,6 +134,7 @@
 <a href="group__Exception.html"/>
 <a href="group__Arm.html"/>
 <a href="group__Base.html"/>
+<a href="group__Gripper.html"/>
 <a href="group__MovementSensor.html"/>
 <a href="group__PowerSensor.html"/>
 <a href="group__Sensor.html"/>
@@ -186,6 +193,8 @@
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01GenericService_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Gizmo_01_4.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Gizmo_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01Gripper_01_4.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01Gripper_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01MLModelService_01_4.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01MLModelService_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Motion_01_4.html"/>
@@ -278,6 +287,8 @@
 <a href="structviam_1_1sdk_1_1geo__point-members.html"/>
 <a href="classviam_1_1sdk_1_1GeometryConfig.html"/>
 <a href="classviam_1_1sdk_1_1GeometryConfig-members.html"/>
+<a href="classviam_1_1sdk_1_1Gripper.html"/>
+<a href="classviam_1_1sdk_1_1Gripper-members.html"/>
 <a href="classviam_1_1sdk_1_1GRPCException.html"/>
 <a href="classviam_1_1sdk_1_1GRPCException-members.html"/>
 <a href="classviam_1_1sdk_1_1HandlerMap__.html"/>
@@ -464,6 +475,10 @@
 <a href="classviam_1_1sdk_1_1impl_1_1GenericServiceClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1GenericServiceServer.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1GenericServiceServer-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1GripperClient.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1GripperClient-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1GripperServer.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1GripperServer-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1MLModelServiceClient.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1MLModelServiceClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1MLModelServiceServer.html"/>
@@ -556,6 +571,7 @@
 <a href="functions_func_l.html"/>
 <a href="functions_func_m.html"/>
 <a href="functions_func_n.html"/>
+<a href="functions_func_o.html"/>
 <a href="functions_func_r.html"/>
 <a href="functions_func_s.html"/>
 <a href="functions_func_t.html"/>
