--- a/classviam_1_1sdk_1_1Component.html
+++ b/classviam_1_1sdk_1_1Component.html
@@ -98,11 +98,12 @@ $(function() {
 <area href="classviam_1_1sdk_1_1Camera.html" title="A Camera represents any physical hardware that can capture frames." alt="viam::sdk::Camera" shape="rect" coords="187,336,364,360"/>
 <area href="classviam_1_1sdk_1_1Encoder.html" title="An encoder is a device that is hooked up to motors to report a position." alt="viam::sdk::Encoder" shape="rect" coords="187,392,364,416"/>
 <area href="classviam_1_1sdk_1_1GenericComponent.html" title="A GenericComponent represents any component that can execute arbitrary commands." alt="viam::sdk::GenericComponent" shape="rect" coords="187,448,364,472"/>
-<area href="classviam_1_1sdk_1_1Motor.html" title="A Motor represents physical hardware that controls the rotation of an axle." alt="viam::sdk::Motor" shape="rect" coords="187,504,364,528"/>
-<area href="classviam_1_1sdk_1_1MovementSensor.html" alt="viam::sdk::MovementSensor" shape="rect" coords="187,560,364,584"/>
-<area href="classviam_1_1sdk_1_1PowerSensor.html" alt="viam::sdk::PowerSensor" shape="rect" coords="187,616,364,640"/>
-<area href="classviam_1_1sdk_1_1Sensor.html" alt="viam::sdk::Sensor" shape="rect" coords="187,672,364,696"/>
-<area href="classviam_1_1sdk_1_1Servo.html" alt="viam::sdk::Servo" shape="rect" coords="187,728,364,752"/>
+<area href="classviam_1_1sdk_1_1Gripper.html" title="A Gripper represents a physical robotic gripper." alt="viam::sdk::Gripper" shape="rect" coords="187,504,364,528"/>
+<area href="classviam_1_1sdk_1_1Motor.html" title="A Motor represents physical hardware that controls the rotation of an axle." alt="viam::sdk::Motor" shape="rect" coords="187,560,364,584"/>
+<area href="classviam_1_1sdk_1_1MovementSensor.html" alt="viam::sdk::MovementSensor" shape="rect" coords="187,616,364,640"/>
+<area href="classviam_1_1sdk_1_1PowerSensor.html" alt="viam::sdk::PowerSensor" shape="rect" coords="187,672,364,696"/>
+<area href="classviam_1_1sdk_1_1Sensor.html" alt="viam::sdk::Sensor" shape="rect" coords="187,728,364,752"/>
+<area href="classviam_1_1sdk_1_1Servo.html" alt="viam::sdk::Servo" shape="rect" coords="187,784,364,808"/>
   </map>
 </div></div>
 <table class="memberdecls">
