--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -27,6 +27,7 @@
 <a href="camera_8hpp_source.html"/>
 <a href="component_8hpp_source.html"/>
 <a href="encoder_8hpp_source.html"/>
+<a href="gantry_8hpp_source.html"/>
 <a href="components_2generic_8hpp_source.html"/>
 <a href="services_2generic_8hpp_source.html"/>
 <a href="gripper_8hpp_source.html"/>
@@ -43,6 +44,8 @@
 <a href="camera__server_8hpp_source.html"/>
 <a href="encoder__client_8hpp_source.html"/>
 <a href="encoder__server_8hpp_source.html"/>
+<a href="gantry__client_8hpp_source.html"/>
+<a href="gantry__server_8hpp_source.html"/>
 <a href="components_2private_2generic__client_8hpp_source.html"/>
 <a href="services_2private_2generic__client_8hpp_source.html"/>
 <a href="components_2private_2generic__server_8hpp_source.html"/>
@@ -95,6 +98,7 @@
 <a href="board_8hpp.html"/>
 <a href="camera_8hpp.html"/>
 <a href="encoder_8hpp.html"/>
+<a href="gantry_8hpp.html"/>
 <a href="components_2generic_8hpp.html"/>
 <a href="gripper_8hpp.html"/>
 <a href="motor_8hpp.html"/>
@@ -110,6 +114,8 @@
 <a href="camera__server_8hpp.html"/>
 <a href="encoder__client_8hpp.html"/>
 <a href="encoder__server_8hpp.html"/>
+<a href="gantry__client_8hpp.html"/>
+<a href="gantry__server_8hpp.html"/>
 <a href="components_2private_2generic__client_8hpp.html"/>
 <a href="components_2private_2generic__server_8hpp.html"/>
 <a href="gripper__client_8hpp.html"/>
@@ -134,6 +140,7 @@
 <a href="group__Exception.html"/>
 <a href="group__Arm.html"/>
 <a href="group__Base.html"/>
+<a href="group__Gantry.html"/>
 <a href="group__Gripper.html"/>
 <a href="group__MovementSensor.html"/>
 <a href="group__PowerSensor.html"/>
@@ -187,6 +194,8 @@
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Camera_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Encoder_01_4.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Encoder_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01Gantry_01_4.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01Gantry_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01GenericComponent_01_4.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01GenericComponent_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01GenericService_01_4.html"/>
@@ -277,6 +286,10 @@
 <a href="structviam_1_1sdk_1_1euler__angles-members.html"/>
 <a href="classviam_1_1sdk_1_1Exception.html"/>
 <a href="classviam_1_1sdk_1_1Exception-members.html"/>
+<a href="classviam_1_1sdk_1_1Gantry.html"/>
+<a href="classviam_1_1sdk_1_1Gantry-members.html"/>
+<a href="structviam_1_1sdk_1_1Gantry_1_1movement__coordinate.html"/>
+<a href="structviam_1_1sdk_1_1Gantry_1_1movement__coordinate-members.html"/>
 <a href="classviam_1_1sdk_1_1GenericComponent.html"/>
 <a href="classviam_1_1sdk_1_1GenericComponent-members.html"/>
 <a href="classviam_1_1sdk_1_1GenericService.html"/>
@@ -467,6 +480,10 @@
 <a href="classviam_1_1sdk_1_1impl_1_1EncoderClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1EncoderServer.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1EncoderServer-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1GantryClient.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1GantryClient-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1GantryServer.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1GantryServer-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1GenericComponentClient.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1GenericComponentClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1GenericComponentServer.html"/>
@@ -567,6 +584,7 @@
 <a href="functions_func_e.html"/>
 <a href="functions_func_f.html"/>
 <a href="functions_func_g.html"/>
+<a href="functions_func_h.html"/>
 <a href="functions_func_i.html"/>
 <a href="functions_func_l.html"/>
 <a href="functions_func_m.html"/>
