deploy: f3d0558459def45cdbbb43a9e1d632a15ba0dd9d

--- a/classviam_1_1sdk_1_1Component.html
+++ b/classviam_1_1sdk_1_1Component.html
@@ -102,9 +102,10 @@ $(function() {
 <area href="classviam_1_1sdk_1_1Gripper.html" title="A Gripper represents a physical robotic gripper." alt="viam::sdk::Gripper" shape="rect" coords="187,560,364,584"/>
 <area href="classviam_1_1sdk_1_1Motor.html" title="A Motor represents physical hardware that controls the rotation of an axle." alt="viam::sdk::Motor" shape="rect" coords="187,616,364,640"/>
 <area href="classviam_1_1sdk_1_1MovementSensor.html" alt="viam::sdk::MovementSensor" shape="rect" coords="187,672,364,696"/>
-<area href="classviam_1_1sdk_1_1PowerSensor.html" alt="viam::sdk::PowerSensor" shape="rect" coords="187,728,364,752"/>
-<area href="classviam_1_1sdk_1_1Sensor.html" alt="viam::sdk::Sensor" shape="rect" coords="187,784,364,808"/>
-<area href="classviam_1_1sdk_1_1Servo.html" alt="viam::sdk::Servo" shape="rect" coords="187,840,364,864"/>
+<area href="classviam_1_1sdk_1_1PoseTracker.html" title="A PoseTracker represents a physical pose or motion tracking device." alt="viam::sdk::PoseTracker" shape="rect" coords="187,728,364,752"/>
+<area href="classviam_1_1sdk_1_1PowerSensor.html" alt="viam::sdk::PowerSensor" shape="rect" coords="187,784,364,808"/>
+<area href="classviam_1_1sdk_1_1Sensor.html" alt="viam::sdk::Sensor" shape="rect" coords="187,840,364,864"/>
+<area href="classviam_1_1sdk_1_1Servo.html" alt="viam::sdk::Servo" shape="rect" coords="187,896,364,920"/>
   </map>
 </div></div>
 <table class="memberdecls">
