--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -33,6 +33,7 @@
 <a href="gripper_8hpp_source.html"/>
 <a href="motor_8hpp_source.html"/>
 <a href="movement__sensor_8hpp_source.html"/>
+<a href="pose__tracker_8hpp_source.html"/>
 <a href="power__sensor_8hpp_source.html"/>
 <a href="arm__client_8hpp_source.html"/>
 <a href="arm__server_8hpp_source.html"/>
@@ -56,6 +57,8 @@
 <a href="motor__server_8hpp_source.html"/>
 <a href="movement__sensor__client_8hpp_source.html"/>
 <a href="movement__sensor__server_8hpp_source.html"/>
+<a href="pose__tracker__client_8hpp_source.html"/>
+<a href="pose__tracker__server_8hpp_source.html"/>
 <a href="power__sensor__client_8hpp_source.html"/>
 <a href="power__sensor__server_8hpp_source.html"/>
 <a href="sensor__client_8hpp_source.html"/>
@@ -103,6 +106,7 @@
 <a href="gripper_8hpp.html"/>
 <a href="motor_8hpp.html"/>
 <a href="movement__sensor_8hpp.html"/>
+<a href="pose__tracker_8hpp.html"/>
 <a href="power__sensor_8hpp.html"/>
 <a href="arm__client_8hpp.html"/>
 <a href="arm__server_8hpp.html"/>
@@ -124,6 +128,8 @@
 <a href="motor__server_8hpp.html"/>
 <a href="movement__sensor__client_8hpp.html"/>
 <a href="movement__sensor__server_8hpp.html"/>
+<a href="pose__tracker__client_8hpp.html"/>
+<a href="pose__tracker__server_8hpp.html"/>
 <a href="power__sensor__client_8hpp.html"/>
 <a href="power__sensor__server_8hpp.html"/>
 <a href="sensor__client_8hpp.html"/>
@@ -143,6 +149,7 @@
 <a href="group__Gantry.html"/>
 <a href="group__Gripper.html"/>
 <a href="group__MovementSensor.html"/>
+<a href="group__PoseTracker.html"/>
 <a href="group__PowerSensor.html"/>
 <a href="group__Sensor.html"/>
 <a href="group__Servo.html"/>
@@ -212,6 +219,8 @@
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Motor_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01MovementSensor_01_4.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01MovementSensor_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01PoseTracker_01_4.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01PoseTracker_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01PowerSensor_01_4.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01PowerSensor_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Resource_01_4.html"/>
@@ -384,6 +393,8 @@
 <a href="structviam_1_1sdk_1_1pose__in__frame-members.html"/>
 <a href="structviam_1_1sdk_1_1pose__orientation.html"/>
 <a href="structviam_1_1sdk_1_1pose__orientation-members.html"/>
+<a href="classviam_1_1sdk_1_1PoseTracker.html"/>
+<a href="classviam_1_1sdk_1_1PoseTracker-members.html"/>
 <a href="classviam_1_1sdk_1_1PowerSensor.html"/>
 <a href="classviam_1_1sdk_1_1PowerSensor-members.html"/>
 <a href="structviam_1_1sdk_1_1PowerSensor_1_1current.html"/>
@@ -512,6 +523,10 @@
 <a href="classviam_1_1sdk_1_1impl_1_1MovementSensorClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1MovementSensorServer.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1MovementSensorServer-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1PoseTrackerClient.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1PoseTrackerClient-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1PoseTrackerServer.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1PoseTrackerServer-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1PowerSensorClient.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1PowerSensorClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1PowerSensorServer.html"/>
