--- a/classviam_1_1sdk_1_1ResourceServer.html
+++ b/classviam_1_1sdk_1_1ResourceServer.html
@@ -106,9 +106,10 @@ $(function() {
 <area href="classviam_1_1sdk_1_1impl_1_1MotionServer.html" title="gRPC server implementation of a Motion service." alt="viam::sdk::impl::MotionServer" shape="rect" coords="254,784,498,808"/>
 <area href="classviam_1_1sdk_1_1impl_1_1MotorServer.html" title="gRPC server implementation of a Motor component." alt="viam::sdk::impl::MotorServer" shape="rect" coords="254,840,498,864"/>
 <area href="classviam_1_1sdk_1_1impl_1_1MovementSensorServer.html" title="gRPC server implementation of a MovementSensor component." alt="viam::sdk::impl::MovementSensorServer" shape="rect" coords="254,896,498,920"/>
-<area href="classviam_1_1sdk_1_1impl_1_1PowerSensorServer.html" title="gRPC server implementation of a PowerSensor component." alt="viam::sdk::impl::PowerSensorServer" shape="rect" coords="254,952,498,976"/>
-<area href="classviam_1_1sdk_1_1impl_1_1SensorServer.html" title="gRPC server implementation of a Sensor component." alt="viam::sdk::impl::SensorServer" shape="rect" coords="254,1008,498,1032"/>
-<area href="classviam_1_1sdk_1_1impl_1_1ServoServer.html" title="gRPC server implementation of a Servo component." alt="viam::sdk::impl::ServoServer" shape="rect" coords="254,1064,498,1088"/>
+<area href="classviam_1_1sdk_1_1impl_1_1PoseTrackerServer.html" title="gRPC server implementation of a PoseTracker component." alt="viam::sdk::impl::PoseTrackerServer" shape="rect" coords="254,952,498,976"/>
+<area href="classviam_1_1sdk_1_1impl_1_1PowerSensorServer.html" title="gRPC server implementation of a PowerSensor component." alt="viam::sdk::impl::PowerSensorServer" shape="rect" coords="254,1008,498,1032"/>
+<area href="classviam_1_1sdk_1_1impl_1_1SensorServer.html" title="gRPC server implementation of a Sensor component." alt="viam::sdk::impl::SensorServer" shape="rect" coords="254,1064,498,1088"/>
+<area href="classviam_1_1sdk_1_1impl_1_1ServoServer.html" title="gRPC server implementation of a Servo component." alt="viam::sdk::impl::ServoServer" shape="rect" coords="254,1120,498,1144"/>
   </map>
 </div></div>
 <table class="memberdecls">
