deploy: 45477aecb490e00db36001e865ceeb225d53ecc7

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -84,6 +84,8 @@
 <a href="stoppable_8hpp_source.html"/>
 <a href="client_8hpp_source.html"/>
 <a href="dial_8hpp_source.html"/>
+<a href="message__sizes_8hpp_source.html"/>
+<a href="viam__grpc__channel_8hpp_source.html"/>
 <a href="server_8hpp_source.html"/>
 <a href="motion_8hpp_source.html"/>
 <a href="mlmodel_8hpp_source.html"/>
@@ -553,6 +555,7 @@
 <a href="dir_03f3df3277e1f570b0f8560afe314e17.html"/>
 <a href="dir_f47cd1ff0d02f7e861330f883ed1824c.html"/>
 <a href="dir_f844bc137c2bbb435ff038bb4a5d57e9.html"/>
+<a href="dir_f831eb8368c1d418ad5a18cbc638d687.html"/>
 <a href="dir_6c4f430257c3bc083528a175bb5c9b02.html"/>
 <a href="dir_23f34255b825d69725235b8a32db7d62.html"/>
 <a href="dir_eecfbb3c5bd141212fcc8942b41bb556.html"/>
